Fix spacing when social media buttons disabled

--- a/sass/partials/_social.scss
+++ b/sass/partials/_social.scss
@@ -1,6 +1,6 @@
 .social {
   width: 60%;
-  margin: 4rem auto 0;
+  margin: 0 auto;
   display: flex;
   justify-content: space-around;
   font-size: 2.4rem;
